added new yamls

--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G11_hash_impact_of_multiple_part_ops.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G11_hash_impact_of_multiple_part_ops.yaml
@@ -169,7 +169,7 @@ microbenchmark:
                         - query: delete from projects_with_part where uid=? or uid=?;
                           bindings:
                             - count: 2
-                              util: RandomInt
+                              util: PrimaryIntGen
                               params: [1, 100000]
 
             - workload: delete_without_part
@@ -180,5 +180,5 @@ microbenchmark:
                         - query: delete from projects_without_part where uid=? or uid=?;
                           bindings:
                             - count: 2
-                              util: RandomInt
+                              util: PrimaryIntGen
                               params: [1, 100000]
