--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G12_impact_of_hash_partitioning.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G12_impact_of_hash_partitioning.yaml
@@ -168,7 +168,7 @@ microbenchmark:
                     queries:
                         - query: delete from projects_with_part where id=?; 
                           bindings:
-                            - util: RandomInt
+                            - util: PrimaryIntGen
                               params: [1, 100000]
 
             - workload: delete_without_part
@@ -178,5 +178,5 @@ microbenchmark:
                     queries:
                         - query: delete from projects_without_part where id=?;
                           bindings:
-                            - util: RandomInt
+                            - util: PrimaryIntGen
                               params: [1, 100000]
