--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G12_impact_of_hash_partitioning_using_pc_uid.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G12_impact_of_hash_partitioning_using_pc_uid.yaml
@@ -31,14 +31,14 @@ microbenchmark:
             - DROP TABLE IF EXISTS projects_rem_3;
             - DROP TABLE IF EXISTS projects_rem_4;
 
-            - create table projects_with_part (id int, name varchar(20) NOT NULL, uid int, created_at date,PRIMARY KEY (id, uid)) PARTITION BY HASH (uid);
+            - create table projects_with_part (id int, name varchar(20) NOT NULL, uid int, version int, created_at date,PRIMARY KEY (id, uid)) PARTITION BY HASH (uid);
             - CREATE TABLE projects_rem_0 PARTITION OF projects_with_part FOR VALUES WITH (MODULUS 5, REMAINDER 0);
             - CREATE TABLE projects_rem_1 PARTITION OF projects_with_part FOR VALUES WITH (MODULUS 5, REMAINDER 1);
             - CREATE TABLE projects_rem_2 PARTITION OF projects_with_part FOR VALUES WITH (MODULUS 5, REMAINDER 2);
             - CREATE TABLE projects_rem_3 PARTITION OF projects_with_part FOR VALUES WITH (MODULUS 5, REMAINDER 3);
             - CREATE TABLE projects_rem_4 PARTITION OF projects_with_part FOR VALUES WITH (MODULUS 5, REMAINDER 4);
 
-            - create table projects_without_part (id int, name varchar(20) NOT NULL, uid int, created_at date,PRIMARY KEY (id, uid));
+            - create table projects_without_part (id int, name varchar(20) NOT NULL, uid int, version int, created_at date,PRIMARY KEY (id, uid));
         cleanup:
             - DROP TABLE IF EXISTS projects_with_part;
             - DROP TABLE IF EXISTS projects_without_part;
@@ -61,6 +61,9 @@ microbenchmark:
                   - name: uid
                     util: PrimaryIntGen
                     params: [1, 100000]
+                  - name: version
+                    util: PrimaryIntGen
+                    params: [1, 100000]
                   - name: created_at
                     util: CyclicSeqDateGen
                     params: [2001,2025]
@@ -75,6 +78,9 @@ microbenchmark:
                     util: RandomAString
                     params: [1, 20]
                   - name: uid
+                    util: PrimaryIntGen
+                    params: [1, 100000]
+                  - name: version
                     util: PrimaryIntGen
                     params: [1, 100000]
                   - name: created_at
@@ -110,12 +116,14 @@ microbenchmark:
                   - name: insert_with_part
                     weight: 100
                     queries:
-                        - query: insert into projects_with_part values(?,?,?,?);
+                        - query: insert into projects_with_part values(?,?,?,?,?);
                           bindings:
                               - util: PrimaryIntGen
                                 params: [100001, 500000]
                               - util: RandomAString
                                 params: [1, 20]
+                              - util: PrimaryIntGen
+                                params: [1, 100000]
                               - util: PrimaryIntGen
                                 params: [1, 100000]
                               - util: CyclicSeqDateGen
@@ -126,12 +134,14 @@ microbenchmark:
                   - name: insert_without_part
                     weight: 100
                     queries:
-                        - query: insert into projects_without_part values(?,?,?,?);
+                        - query: insert into projects_without_part values(?,?,?,?,?);
                           bindings:
                               - util: PrimaryIntGen
                                 params: [100001, 500000]
                               - util: RandomAString
                                 params: [1, 20]
+                              - util: PrimaryIntGen
+                                params: [1, 100000]
                               - util: PrimaryIntGen
                                 params: [1, 100000]
                               - util: CyclicSeqDateGen
@@ -142,7 +152,7 @@ microbenchmark:
                   - name: update_with_part
                     weight: 100
                     queries:
-                        - query: update projects_with_part set id=id+100000 where uid=?;
+                        - query: update projects_with_part set version=version+1 where uid=?;
                           bindings:
                             - util: RandomInt
                               params: [1, 100000]
@@ -152,7 +162,7 @@ microbenchmark:
                   - name: update_without_part
                     weight: 100
                     queries:
-                        - query: update projects_without_part set id=id+100000 where uid=?;
+                        - query: update projects_without_part set version=version+1 where uid=?;
                           bindings:
                             - util: RandomInt
                               params: [1, 100000]
