--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G11_hash_impact_of_multiple_part_ops_uid.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G11_hash_impact_of_multiple_part_ops_uid.yaml
@@ -165,7 +165,7 @@ microbenchmark:
                   - name: update_without_part
                     weight: 100
                     queries:
-                        - query: update projects_without_part version=version+1 where uid=? or uid=?;
+                        - query: update projects_without_part set version=version+1 where uid=? or uid=?;
                           bindings:
                             - count: 2
                               util: RandomInt
