--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G1_impact_of_partitioning_using_pc.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/PFK_G1_impact_of_partitioning_using_pc.yaml
@@ -85,85 +85,85 @@ microbenchmark:
         #     - ALTER TABLE employees_with_fk add CONSTRAINT fk_project FOREIGN KEY (project_id) REFERENCES projects(id);
             
         executeRules:
-            - workload: select_with_part
-              run:
-                  - name: select_with_part
-                    weight: 100
-                    queries:
-                        - query: SELECT * FROM projects_with_part where dept=?;
-                          bindings:
-                              - util: OneStringFromArray
-                                params: ['Sales','Engineering','HR','Finance','Anonymous']
+            # - workload: select_with_part
+            #   run:
+            #       - name: select_with_part
+            #         weight: 100
+            #         queries:
+            #             - query: SELECT * FROM projects_with_part where dept=?;
+            #               bindings:
+            #                   - util: OneStringFromArray
+            #                     params: ['Sales','Engineering','HR','Finance','Anonymous']
 
-            - workload: select_without_part
-              run:
-                  - name: select_without_part
-                    weight: 100
-                    queries:
-                        - query: SELECT * FROM projects_without_part where dept=?;
-                          bindings:
-                              - util: OneStringFromArray
-                                params: ['Sales','Engineering','HR','Finance','Anonymous']
+            # - workload: select_without_part
+            #   run:
+            #       - name: select_without_part
+            #         weight: 100
+            #         queries:
+            #             - query: SELECT * FROM projects_without_part where dept=?;
+            #               bindings:
+            #                   - util: OneStringFromArray
+            #                     params: ['Sales','Engineering','HR','Finance','Anonymous']
                               
-            - workload: insert_with_part
-              run:
-                  - name: insert_with_part
-                    weight: 100
-                    queries:
-                        - query: insert into projects_with_part values(?,?,?,?);
-                          bindings:
-                              - util: PrimaryIntGen
-                                params: [100001, 500000]
-                              - util: RandomAString
-                                params: [1, 20]
-                              - util: SeqStringGenFromArray
-                                params: ['Sales','Engineering','HR','Finance','Anonymous']
-                              - util: CyclicSeqDateGen
-                                params: [2001,2025]
+            # - workload: insert_with_part
+            #   run:
+            #       - name: insert_with_part
+            #         weight: 100
+            #         queries:
+            #             - query: insert into projects_with_part values(?,?,?,?);
+            #               bindings:
+            #                   - util: PrimaryIntGen
+            #                     params: [100001, 500000]
+            #                   - util: RandomAString
+            #                     params: [1, 20]
+            #                   - util: SeqStringGenFromArray
+            #                     params: ['Sales','Engineering','HR','Finance','Anonymous']
+            #                   - util: CyclicSeqDateGen
+            #                     params: [2001,2025]
             
-            - workload: insert_without_part
+            # - workload: insert_without_part
+            #   run:
+            #       - name: insert_without_part
+            #         weight: 100
+            #         queries:
+            #             - query: insert into projects_without_part values(?,?,?,?);
+            #               bindings:
+            #                   - util: PrimaryIntGen
+            #                     params: [100001, 500000]
+            #                   - util: RandomAString
+            #                     params: [1, 20]
+            #                   - util: SeqStringGenFromArray
+            #                     params: ['Sales','Engineering','HR','Finance','Anonymous']
+            #                   - util: CyclicSeqDateGen
+            #                     params: [2001,2025]
+
+            - workload: delete_with_part
               run:
-                  - name: insert_without_part
+                  - name: delete_with_part
                     weight: 100
                     queries:
-                        - query: insert into projects_without_part values(?,?,?,?);
+                        - query: delete from projects_with_part where dept=? and id between ?*100 and ?*100+101;
                           bindings:
-                              - util: PrimaryIntGen
-                                params: [100001, 500000]
-                              - util: RandomAString
-                                params: [1, 20]
-                              - util: SeqStringGenFromArray
-                                params: ['Sales','Engineering','HR','Finance','Anonymous']
-                              - util: CyclicSeqDateGen
-                                params: [2001,2025]
+                            - util: SeqStringGenFromArray
+                              params: ['Sales','Engineering','HR','Finance','Anonymous']
+                            - util: SeqIntGenWithInterval
+                              params: [0,999,5]
+                            - util: SeqIntGenWithInterval
+                              params: [0,999,5]
 
-            # - workload: delete_with_part
-            #   run:
-            #       - name: delete_with_part
-            #         weight: 100
-            #         queries:
-            #             - query: delete from projects_with_part where dept=? and id between ?*100+1 and ?*100+100;
-            #               bindings:
-            #                 - util: OneStringFromArray
-            #                   params: ['Sales','Engineering','HR','Finance','Anonymous']
-            #                 - util: PrimaryIntGen
-            #                   params: [0,999]
-            #                 - util: PrimaryIntGen
-            #                   params: [0,999]
-
-            # - workload: delete_without_part
-            #   run:
-            #       - name: delete_without_part
-            #         weight: 100
-            #         queries:
-            #             - query: delete from projects_without_part where dept=? and id between ?*100+1 and ?*100+100;
-            #               bindings:
-            #                 - util: OneStringFromArray
-            #                   params: ['Sales','Engineering','HR','Finance','Anonymous']
-            #                 - util: PrimaryIntGen
-            #                   params: [0,999]
-            #                 - util: PrimaryIntGen
-            #                   params: [0,999]
+            - workload: delete_without_part
+              run:
+                  - name: delete_without_part
+                    weight: 100
+                    queries:
+                        - query: delete from projects_without_part where dept=? and id between ?*100 and ?*100+101;
+                          bindings:
+                            - util: SeqStringGenFromArray
+                              params: ['Sales','Engineering','HR','Finance','Anonymous']
+                            - util: SeqIntGenWithInterval
+                              params: [0,999,5]
+                            - util: SeqIntGenWithInterval
+                              params: [0,999,5]
 
             - workload: update_with_part
               run:
