--- a/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/temp.yaml
+++ b/config/yugabyte/regression_pipelines/foreign_key_on_partitioning/yugabyte/temp.yaml
@@ -23,7 +23,7 @@ microbenchmark:
         setAutoCommit: false
         create:
 
-            - DROP TABLE tab1 IF EXISTS
+            - DROP TABLE IF EXISTS tab1;
 
             - CREATE TABLE tab1(id int primary key, uid int unique, name varchar(20));
             
